--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -24,6 +24,6 @@
 
         <!--put your external script links here-->
         <script type="text/javascript" src="lib/leaflet.js"></script>
-        <script type="text/javascript" src="js/adaptedTutorial.js"></script>
+        <script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
