--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -6,7 +6,15 @@
             <title></title>
 
         <!--put your external stylesheet links here-->
-        <link rel="stylesheet" href="lib/leaflet.css">
+        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+        integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+        crossorigin=""/>
+        <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+        integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+        crossorigin=""></script>
+        <style>
+            #map { height: 180px; }
+        </style>
         <!--[if IE<9]>
             <link rel="stylesheet" href="css/style.ie.css">
         <![endif]-->
@@ -17,6 +25,7 @@
     </head>
 
     <body>
+        <div id="map"></div>
         <!--put your initial page content here-->
 
         <!--you can also use this space for internal scripts;
