--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -13,7 +13,7 @@
         integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
         crossorigin=""></script>
         <style>
-            #map { height: 180px; }
+            #map { height: 570px; }
         </style>
         <!--[if IE<9]>
             <link rel="stylesheet" href="css/style.ie.css">
@@ -26,6 +26,7 @@
 
     <body>
         <div id="map"></div>
+        <div id="panel"></div>
         <!--put your initial page content here-->
 
         <!--you can also use this space for internal scripts;
