--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -34,6 +34,6 @@
 
         <!--put your external script links here-->
         <script type="text/javascript" src="lib/leaflet.js"></script>
-        <script type="text/javascript" src="js/main.js"></script>
+        <script type="text/javascript" src="js/main_lab1.js"></script>
     </body>
 </html>
