--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -9,11 +9,12 @@
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
         integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
         crossorigin=""/>
+        <link rel="stylesheet" href="css/style.css"/>
         <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
         integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
         crossorigin=""></script>
         <style>
-            #map { height: 570px; }
+            #map { height: 500px; }
         </style>
         <!--[if IE<9]>
             <link rel="stylesheet" href="css/style.ie.css">
@@ -21,7 +22,7 @@
 
          <!--you can also place internal styles here;
              place these within <style> tags-->
-        
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-easyprint/2.9.0/easyprint.js"></script>
     </head>
 
     <body>
@@ -31,9 +32,10 @@
 
         <!--you can also use this space for internal scripts;
         place these within <script> tags-->
-
         <!--put your external script links here-->
         <script type="text/javascript" src="lib/leaflet.js"></script>
         <script type="text/javascript" src="js/main_lab1.js"></script>
+        
     </body>
 </html>
+
