--- a/boilerplate/index.html
+++ b/boilerplate/index.html
@@ -13,7 +13,9 @@
           crossorigin=""/>
     <link rel="stylesheet" href="css/style.css"/>
     <link rel="stylesheet" href="lib/leaflet-compass.css" />
-
+    <link rel="stylesheet" href="leaflet-compass.css">
+    <script src="leaflet-compass.js"></script>
+    
     <!-- Include Leaflet JS -->
     <script src="lib/leaflet.js"
             integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
